--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -20,7 +20,7 @@
 
   <!-- Main Content -->
   <main>
-    <section id="introduction">
+    <section>
       <h2>Welcome to TechCon 2024</h2>
       <p>
         Join us at TechCon 2024, the premier technology conference bringing together 
