--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <article id="history">
+        <article>
             <h2>Our History</h2>
             <p>
                 TechCon began in 2010 as a small gathering of technology enthusiasts and has grown into one of the leading annual conferences in the industry. Over the years, TechCon has hosted thousands of attendees, fostering innovation and collaboration.
@@ -26,7 +26,7 @@
             <img src="images/techcon_2010.jpg" alt="TechCon 2010 opening ceremony" width="350">
             <img src="images/techcon_growth.jpg" alt="TechCon audience over the years" width="350">
         </article>
-        <article id="mission">
+        <article>
             <h2>Our Mission</h2>
             <p>
                 TechCon's mission is to inspire, educate, and connect technology professionals from around the world. We strive to create an inclusive environment where ideas flourish and future leaders emerge.
@@ -34,7 +34,7 @@
             <img src="images/mission_icon.png" alt="TechCon mission icon" width="100">
             <img src="images/inspiration.jpg" alt="Motivational keynote at TechCon" width="350">
         </article>
-        <article id="past-speakers">
+        <article>
             <h2>Notable Past Speakers</h2>
             <section>
                 <img src="images/speaker_jane_doe.jpg" alt="Jane Doe, AI Pioneer" width="120">
@@ -63,4 +63,5 @@
         <p>&copy; 2024 TechCon. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
