--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -45,7 +45,7 @@
         </form>
     </main>
     <footer>
-        <p>Copyright &copy; 2024 TechCon. All rights reserved.</p>
+        <p>copyright &copy; 2024 TechCon. All rights reserved.</p>
     </footer>
 </body>
 </html>
